--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
 	</main>
 	<footer>
 		 <p>&copy; (c) 2018, San Joaquin Valley Town Hall, Fresno, CA 93755 </p>
+		<p>&copy 2021, Jakub Kowal</p>
 	</footer>
 </body>
 </html>
